Personal details, create and edit experience

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -287,3 +287,7 @@ input:where([type='text']):focus, input:where(:not([type])):focus, input:where([
             border-color: var(--color-primary);
             background-color: var(--color-primary-50);
         }
+
+.candidate-modal-form{
+  margin-top: 4% !important;
+}
